end to end demo, when combined with keepers: send data to bitjoe via browser, encrypt data, send it to storage, send hash to blockchain, get transaction update from blockchain, parse data, get from storage, decrypt

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.tradle</groupId>
-  <artifactId>joe</artifactId>
+  <artifactId>bitjoe</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>BitJoe</name>
   <description>Bare bones implementation of Tradle crypto journal node</description>
@@ -38,5 +38,10 @@
       <artifactId>bcpg-jdk16</artifactId>
       <version>1.46</version>
     </dependency>
+    <dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpclient</artifactId>
+		<version>4.3.5</version>
+	</dependency>
   </dependencies>
 </project>
