--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
   <name>BitJoe</name>
   <description>Bare bones implementation of Tradle crypto journal node</description>
   <packaging>jar</packaging>
+  <properties>
+  	<project.buildDir>build</project.buildDir>
+  </properties>
   <build>
     <plugins>
       <plugin>
@@ -19,6 +22,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <outputFile>${project.buildDir}/${project.artifactId}.jar</outputFile>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 	              <mainClass>io.tradle.joe.server.JoeServer</mainClass>
