--- a/conf/config.json
+++ b/conf/config.json
@@ -12,6 +12,15 @@
 		"host": "http://127.0.0.1",
 		"port": 8080
 	},
+	
+	"webHookMaxTimeouts": 3,
+	
+	"webHooks": [
+		{
+			"url": "http://127.0.0.1:8880",
+			"events": ["NewKey", "NewValue"]
+		}
+	],
 
 	"keeperAddresses" : [
 		{
@@ -22,5 +31,7 @@
 			"host": "http://127.0.0.1",
 			"port": 8009
 		}
-	]
+	],
+	
+	testIdentities: ["Apple", "Trader Joe's", "Mom"]
 }
