--- a/pom.xml
+++ b/pom.xml
@@ -1,91 +1,133 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>io.tradle</groupId>
-  <artifactId>bitjoe</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>BitJoe</name>
-  <description>Bare bones implementation of Tradle crypto journal node</description>
-  <packaging>jar</packaging>
-  <properties>
-  	<project.buildDir>build</project.buildDir>
-  </properties>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>2.2</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <outputFile>${project.buildDir}/${project.artifactId}.jar</outputFile>
-              <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-	              <mainClass>io.tradle.joe.server.JoeServer</mainClass>
-                </transformer>
-              </transformers>
-              <!--artifactSet>
-                <excludes>
-                  <exclude>org.bitcoinj:*</exclude>
-                </excludes>
-              </artifactSet-->
-	         <filters>
-		        <filter>
-		            <artifact>*:*</artifact>
-                    <!-- exclude signatures, the bundling process breaks them for some reason -->
-		            <excludes>
-		                <exclude>META-INF/*.SF</exclude>
-		                <exclude>META-INF/*.DSA</exclude>
-		                <exclude>META-INF/*.RSA</exclude>
-		            </excludes>
-		        </filter>
-		    </filters>     
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-  	<dependency>
-	    <groupId>io.netty</groupId>
-	    <artifactId>netty-all</artifactId> <!-- Use 'netty-all' for 4.0 or above -->
-	    <version>4.0.23.Final</version>
-	</dependency>
-	<dependency>
-        <groupId>org.bitcoinj</groupId>
-        <artifactId>bitcoinj-core-bundled</artifactId>
-        <version>0.13-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-jdk14</artifactId>
-        <version>1.7.6</version>
-    </dependency>
-    <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <version>1.3.167</version>
-    </dependency>
-    <dependency>
-		<groupId>com.google.code.gson</groupId>
-		<artifactId>gson</artifactId>
-		<version>2.3</version>
-	</dependency>
-	<!-- Bouncy Castle for PGP support -->
-    <dependency>
-      <groupId>org.bouncycastle</groupId>
-      <artifactId>bcpg-jdk16</artifactId>
-      <version>1.46</version>
-    </dependency>
-    <dependency>
-		<groupId>org.apache.httpcomponents</groupId>
-		<artifactId>httpclient</artifactId>
-		<version>4.3.5</version>
-	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>io.tradle</groupId>
+	<artifactId>bitjoe</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>BitJoe</name>
+	<description>Bare bones implementation of Tradle crypto journal node</description>
+	<packaging>jar</packaging>
+	<properties>
+		<project.buildDir>build</project.buildDir>
+	</properties>
+    <profiles>
+        <profile>
+            <id>update-protobuf</id>
+            <activation>
+                <property>
+                    <name>updateProtobuf</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>compile-protoc</id>
+                                <phase>generate-sources</phase>
+                                <configuration>
+                                    <tasks>
+                                        <path id="proto.path">
+                                            <fileset dir="src">
+                                                <include name="**/*.proto"/>
+                                            </fileset>
+                                        </path>
+                                        <pathconvert pathsep=" " property="proto.files" refid="proto.path"/>
+                                        <exec executable="protoc" failonerror="true">
+                                            <arg value="--java_out=${project.basedir}/src/main/java"/>
+                                            <arg value="-I${project.basedir}/src"/>
+                                            <arg line="${proto.files}"/>
+                                        </exec>
+                                    </tasks>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.2</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<outputFile>${project.buildDir}/${project.artifactId}.jar</outputFile>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>io.tradle.joe.server.JoeServer</mainClass>
+								</transformer>
+							</transformers>
+							<!--artifactSet> <excludes> <exclude>org.bitcoinj:*</exclude> </excludes> 
+								</artifactSet -->
+							<filters>
+								<filter>
+									<artifact>*:*</artifact>
+									<!-- exclude signatures, the bundling process breaks them for some 
+										reason -->
+									<excludes>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+									</excludes>
+								</filter>
+							</filters>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId> <!-- Use 'netty-all' for 4.0 or above -->
+			<version>4.0.23.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bitcoinj</groupId>
+			<artifactId>bitcoinj-core-bundled</artifactId>
+			<version>0.13-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>1.7.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.167</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3</version>
+		</dependency>
+		<!-- Bouncy Castle for PGP support -->
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpg-jdk16</artifactId>
+			<version>1.46</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.5</version>
+		</dependency>
+	</dependencies>
 </project>
