add path-based request handling, renamed a few files, added AbstractRequest base class for requests for dynamic request class determination

--- a/conf/config.json
+++ b/conf/config.json
@@ -18,7 +18,8 @@
 	"webHooks": [
 		{
 			"url": "http://127.0.0.1:8880",
-			"events": ["NewKey", "NewValue"]
+			"events": ["KeyValue", "Rewind"],
+			"unlimitedTimeouts": true
 		}
 	],
 
